--- a/index.html
+++ b/index.html
@@ -50,18 +50,7 @@
     
     <section>
         <figure>
-            <img src="Minor-threat-malcolm-riviera_big.jpg" alt="">
-        </figure>
-        <div class="content row">
-            <h3>Punk: Minor Threat</h3>
-            <p>Minor Threat was an American hardcore punk band, formed in 1980 in Washington, D.C., by vocalist Ian MacKaye and drummer Jeff Nelson. </p>
-            <p>The band was relatively short-lived, disbanding after only three years together, but had a strong influence in the emerging American hardcore punk scene, both stylistically and in helping to further establish the "do it yourself" ethic for music distribution and concert promotion.</p>
-        </div>
-    </section>
-
-    <section>
-        <figure>
-            <img src="Minor-threat-malcolm-riviera_big.jpg" alt="">
+            <img src="Minor-threat-malcolm-riviera.jpg" alt="">
         </figure>
         <div class="content row">
             <h3>Minor Threat</h3>
@@ -72,7 +61,18 @@
 
     <section>
         <figure>
-            <img src="Minor-threat-malcolm-riviera_big.jpg" alt="">
+            <img src="Minor-threat-malcolm-riviera.jpg" alt="">
+        </figure>
+        <div class="content row">
+            <h3>Minor Threat</h3>
+            <p>Minor Threat was an American hardcore punk band, formed in 1980 in Washington, D.C., by vocalist Ian MacKaye and drummer Jeff Nelson. </p>
+            <p>The band was relatively short-lived, disbanding after only three years together, but had a strong influence in the emerging American hardcore punk scene, both stylistically and in helping to further establish the "do it yourself" ethic for music distribution and concert promotion.</p>
+        </div>
+    </section>
+
+    <section>
+        <figure>
+            <img src="Minor-threat-malcolm-riviera.jpg" alt="">
         </figure>
         <div class="content row">
             <h3>Minor Threat</h3>
