--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 		</figure>
 		<div class="content row">
 			<h3>Half Japanese</h3>
-			<p>The band was formed in Jad and David Fair's bedroom in Michigan in 1975 by brothers Jad and David Fair</p>
+			<p>The band was formed in a bedroom in Michigan in 1975 by brothers Jad and David Fair</p>
 			<p>Half Japanese’ original instrumentation included a small drum set, vocals, and an out-of-tune, distorted guitar; they typically divide into either “love songs or monster songs.”</p>
 			<p>Half Japanese were born under the banner of musical illiteracy: all members were “forbidden” from learning to play their own instrument.</p>
 		</div>
