--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
 		</figure>
 		<div class="content row">
 			<h3>Half Japanese</h3>
-			<p>The band was formed in a bedroom in Michigan in 1975 by brothers Jad and David Fair</p>
-			<p>Half Japanese’ original instrumentation included a small drum set, vocals, and an out-of-tune, distorted guitar; they typically divide into either “love songs or monster songs.”</p>
+			<p>The band was formed in a bedroom in Michigan in 1975 by brothers Jad and David Fair. They decided to be rock stars one morning, bought instruments and recorded their first album that afternoon.</p>
+			<p>Half Japanese’ original instrumentation included a small drum set, vocals, and an out-of-tune, distorted guitar. According to Jad, their songs can all be divided into either “love songs or monster songs.”</p>
 			<p>Half Japanese were born under the banner of musical illiteracy: all members were “forbidden” from learning to play their own instrument.</p>
 		</div>
 	</section>
@@ -92,7 +92,7 @@
 		<div class="content row">
 			<h3>The Stooges</h3>
 			<p>The Stooges were an American rock band formed in Ann Arbor, Michigan, in 1967. Initially playing a raw, primitive style of rock and roll, the band gained a reputation for their confrontational performances.</p>
-			<p>The Stooges' early musical experiments were more avant garde than punk rock, with Pop incorporating such household objects as a vacuum cleaner and a blender into an intense wall of feedback that one observer described as sounding like “an airplane was landing in the room.” Homemade instruments were also incorporated to flesh out the overall sound.</p>
+			<p>The Stooges' early musical experiments were more avant garde than punk rock, with Iggy Pop incorporating such household objects as a vacuum cleaner and a blender into an intense wall of feedback that one observer described as sounding like “an airplane was landing in the room.” Homemade instruments were also incorporated to flesh out the overall sound.</p>
 		</div>
 	</section>
 
