--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
 			height: 100%;
 		}
 
+		#Cover h1, #Cover h2 { font-size: 10vw; color: #666; }
+		#Cover h1 { font-weight: 800; }
+		#Cover h2 { font-weight: 500; }
 
 		/* scrolling */
 		html, body {
@@ -61,6 +64,14 @@
 	</style>
 </head>
 <body>
+
+	<section id="Cover">
+		<figure>&nbsp;</figure>
+		<div class="content">
+			<h1>DIY Punk</h1>
+			<h2>Four photographs</h2>
+		</div>
+	</section>
 	
 	<section>
 		<figure>
@@ -96,7 +107,6 @@
 		</div>
 	</section>
 
-
 	<section>
 		<figure>
 			<img src="Minor-threat-malcolm-riviera.jpg" alt="Minor Threat"  style="object-position: left top;">
@@ -107,8 +117,6 @@
 			<p>The band was relatively short-lived, disbanding after only three years together, but had a strong influence in the emerging American hardcore punk scene, both stylistically and in helping to further establish the “do it yourself” ethic for music distribution and concert promotion.</p>
 		</div>
 	</section>
-
-
 
 </body>
 </html>
