--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 	
 	<section>
 		<figure>
-			<img src="Death_protopunk_band.jpg" alt="Death" style="object-position: center top;">
+			<img src="images/Death_protopunk_band.jpg" alt="Death" style="object-position: center top;">
 		</figure>
 		<div class="content row">
 			<h3>Death</h3>
@@ -86,7 +86,7 @@
 
 	<section>
 		<figure>
-			<img src="half-japanese.jpg" alt="Half Japanese" style="object-position: left top; " >
+			<img src="images/half-japanese.jpg" alt="Half Japanese" style="object-position: left top; " >
 		</figure>
 		<div class="content row">
 			<h3>Half Japanese</h3>
@@ -98,7 +98,7 @@
 
 	<section>
 		<figure>
-			<img src="stooges.jpg" alt="The Stooges" style="object-position: left top;">
+			<img src="images/stooges.jpg" alt="The Stooges" style="object-position: left top;">
 		</figure>
 		<div class="content row">
 			<h3>The Stooges</h3>
@@ -109,7 +109,7 @@
 
 	<section>
 		<figure>
-			<img src="Minor-threat-malcolm-riviera.jpg" alt="Minor Threat"  style="object-position: left top;">
+			<img src="images/Minor-threat-malcolm-riviera.jpg" alt="Minor Threat"  style="object-position: left top;">
 		</figure>
 		<div class="content row">
 			<h3>Minor Threat</h3>
