--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 		<div class="content row">
 			<h3>The Stooges</h3>
 			<p>The Stooges were an American rock band formed in Ann Arbor, Michigan, in 1967. Initially playing a raw, primitive style of rock and roll, the band gained a reputation for their confrontational performances.</p>
-			<p>The Stooges' early musical experiments were more avant garde than punk rock, with Iggy Pop incorporating such household objects as a vacuum cleaner and a blender into an intense wall of feedback that one observer described as sounding like “an airplane was landing in the room.” Homemade instruments were also incorporated to flesh out the overall sound.</p>
+			<p>Their early musical experiments were more avant garde than punk rock, with Iggy Pop incorporating such household objects as a vacuum cleaner and a blender into an intense wall of feedback that one observer described as sounding like “an airplane was landing in the room.” Homemade instruments were also incorporated to flesh out the overall sound.</p>
 		</div>
 	</section>
 
